// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prueba <GifExpertApp /> debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Gif Search App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon  Ball"
      key="Dragon  Ball"
    />
  </ol>
</Fragment>
`;

exports[`prueba <GifExpertApp /> debe mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    Gif Search App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
